--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -12,3 +12,9 @@
 
 // Blocks
 // ---------------------------------
+
+@import "blocks/header";
+@import "blocks/page";
+@import "blocks/footer";
+@import "blocks/social";
+@import "blocks/accordeon";
