--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -19,4 +19,12 @@
   &--vkontakte {
    background-image: url('../img/svg/vk.svg');
   }
+
+  &:hover {
+    opacity: 0.7;
+  }
+
+  &:active {
+    opacity: 0.3;
+  }
 }
