--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -18,3 +18,9 @@
 @import "blocks/footer";
 @import "blocks/social";
 @import "blocks/accordeon";
+@import "blocks/preview";
+@import "blocks/advatages";
+@import "blocks/about";
+@import "blocks/offers";
+@import "blocks/feedback-form";
+@import "blocks/modal-call";
