--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -46,7 +46,7 @@
     align-self: flex-start;
   }
 
-  @media (max-width: $tablet-width) {
+  @media (max-width: $mobile-width) {
     padding-top: 5px;
   }
 }
