--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -8,17 +8,21 @@ $color-default-white:               #f2f5f6;
 
 // Project palette
 
+$color-blue:                        #00b2ff;
+$color-blue-another:                #00b3ff;
 $color-blue-dark:                   #041427;
-$color-blue:                        #00B2FF;
 $color-white:                       #ffffff;
-$color-white-medium:               #f8fdff;
+$color-white-medium:                #f8fdff;
 $color-white-transparent:           rgba(255, 255, 255, 0.7);
 $color-border-footer:               rgba(248, 253, 255, 0.7);
+$color-extra-light-gray:            #f8fdff;
+$color-light-gray:                  #ebebeb;
+$color-gray-transparent:            rgba(4, 20, 39, 0.15);
 
 // Display width
 
-$desktop-max: 1920px;
-$desktop-min: 1023px;
+$desktop-max: 1919px;
+$desktop-min: 1024px;
 $tablet-width: 1023px;
 $mobile-width: 769px;
 
