--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -2,19 +2,19 @@
   display: flex;
   flex-wrap: wrap;
   width: 1220px;
-  padding: 50px 350px 55px;
+  padding: 50px 0 55px;
   margin: 0 auto;
   box-sizing: content-box;
 
   @media (min-width: $desktop-min) and (max-width: $desktop-max) {
     width: 64%;
-    padding: 50px 18% 55px;
+    padding: 50px 0 55px;
     gap: 30px;
   }
 
   @media (max-width: $tablet-width) {
     width: 87%;
-    padding: 50px 6.5% 65px;
+    padding: 50px 0 65px;
   }
 
   @media (max-width: $mobile-width) {
