Добавляет оверлей при открытом попапе

--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -64,6 +64,7 @@
   position: relative;
   padding-left: 34px;
   padding-bottom: 9px;
+  cursor: pointer;
 
   @media (max-width: $tablet-width) {
     width: 20px;
