--- a/source/sass/blocks/feedback-form.scss
+++ b/source/sass/blocks/feedback-form.scss
@@ -265,6 +265,14 @@
   user-select: none;
   cursor: pointer;
 
+  &:hover {
+    opacity: 0.7;
+  }
+
+  &:active {
+    opacity: 0.3;
+  }
+
   @media (max-width: $tablet-width) {
     line-height: 15px;
   }
