--- a/source/sass/blocks/modal-call.scss
+++ b/source/sass/blocks/modal-call.scss
@@ -1,4 +1,4 @@
-.modal-call {
+.modal-call__container {
   display: none;
   position: fixed;
   width: 500px;
@@ -16,7 +16,7 @@
   }
 }
 
-.modal-call h2 {
+.modal-call__container h2 {
   font-size: 30px;
   line-height: 42px;
   font-family: $roboto-condensed;
@@ -26,7 +26,7 @@
   margin-bottom: 10px;
 }
 
-.modal-call p {
+.modal-call__container p {
   font-size: 16px;
   line-height: 21px;
   color: $color-white;
@@ -34,7 +34,7 @@
   margin-bottom: 40px;
 }
 
-.modal-call input {
+.modal-call__container input {
   width: 100%;
   margin-bottom: 20px;
   min-height: 50px;
@@ -47,7 +47,7 @@
   border-radius: 3px;
 }
 
-.modal-call textarea {
+.modal-call__container textarea {
   width: 100%;
   margin-bottom: 25px;
   min-height: 155px;
@@ -61,8 +61,8 @@
   resize: none;
 }
 
-.modal-call input::placeholder,
-.modal-call textarea::placeholder {
+.modal-call__container input::placeholder,
+.modal-call__container textarea::placeholder {
   color: $color-white;
   opacity: 0.7;
 }
@@ -81,6 +81,14 @@
   text-transform: uppercase;
   font-weight: 700;
   cursor: pointer;
+
+  &:hover {
+    opacity: 0.7;
+  }
+
+  &:active {
+    opacity: 0.3;
+  }
 }
 
 .modal-call__checkbox-wrapper label {
@@ -106,6 +114,14 @@
     outline: 5px auto -webkit-focus-ring-color;
     outline-offset: 7px;
   }
+
+  &:hover {
+    opacity: 0.7;
+  }
+
+  &:active {
+    opacity: 0.3;
+  }
 }
 
 .modal-call__checkbox-wrapper input:checked + label {
@@ -124,10 +140,19 @@
   right: 10px;
   cursor: pointer;
 
+  &:hover {
+    opacity: 0.7;
+  }
+
+  &:active {
+    opacity: 0.3;
+  }
+
   &::before,
   &::after {
     content: "";
-    display: block;
+    position: absolute;
+    left: 7px;
     width: 28px;
     height: 1px;
     background-color: $color-white;
