Правки по результатам тестирования

--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -102,7 +102,7 @@
   }
 
   &--phone::before {
-    background-image: url("../../img/svg/phone-call.svg");
+    background-image: url("../img/svg/phone-call.svg");
   }
 }
 
