--- a/source/sass/blocks/feedback-form.scss
+++ b/source/sass/blocks/feedback-form.scss
@@ -262,6 +262,7 @@
   font-size: 14px;
   line-height: 13px;
   color: $color-white;
+  max-width: 225px;
   user-select: none;
   cursor: pointer;
 
@@ -273,12 +274,18 @@
     opacity: 0.3;
   }
 
+  @media (min-width: $desktop-min) and (max-width: $desktop-max) {
+    max-width: 395px;
+  }
+
   @media (max-width: $tablet-width) {
     line-height: 15px;
+    max-width: 225px;
   }
 
   @media (max-width: $mobile-width) {
     padding-left: 30px;
+    max-width: none;
   }
 
   &::before {
