--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -7,7 +7,8 @@
   box-sizing: content-box;
 
   @media (min-width: $desktop-min) and (max-width: $desktop-max) {
-    width: 64%;
+    max-width: 1220px;
+    width: 95%;
     padding: 50px 0 55px;
     gap: 30px;
   }
@@ -39,18 +40,21 @@
     width: 100%;
     align-items: center;
     margin-right: 0;
-    margin-bottom: 8px;
+    margin-bottom: 23px;
   }
 
   @media (max-width: $mobile-width) {
     flex-direction: column;
     align-self: center;
     margin-bottom: 25px;
+    padding: 0 10px;
   }
 }
 
 .footer__logo-wrapper {
   margin-bottom: 30px;
+  align-self: flex-start;
+  flex-shrink: 0;
 
   @media (max-width: $tablet-width) {
     margin-bottom: 0;
@@ -59,6 +63,7 @@
   @media (max-width: $mobile-width) {
     margin-right: 5px;
     margin-bottom: 13px;
+    align-self: center;
   }
 }
 
