--- a/source/sass/blocks/offers.scss
+++ b/source/sass/blocks/offers.scss
@@ -50,6 +50,7 @@
 
 .offers__list {
   display: flex;
+  flex-wrap: wrap;
   gap: 85px;
   padding: 0;
   margin: 0;
@@ -67,6 +68,10 @@
 
 .offers__item {
   position: relative;
+
+  @media (min-width: $desktop-min) and (max-width: $desktop-max) {
+    width: 28.5%;
+  }
 
   &:hover {
     opacity: 0.7;
