--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -1,10 +1,14 @@
 .social {
   display: flex;
+  flex-wrap: wrap;
+  max-width: 200px;
   gap: 25px;
   margin-left: 15px;
+  justify-content: center;
 
   @media (max-width: $tablet-width) {
-    margin-bottom: 27px;
+    margin-bottom: 12px;
+    max-width: none;
   }
 
   @media (max-width: $mobile-width) {
