--- a/source/sass/blocks/feedback-form.scss
+++ b/source/sass/blocks/feedback-form.scss
@@ -116,7 +116,7 @@
   }
 
   @media (max-width: $mobile-width) {
-    row-gap: 20px;
+    gap: normal;
   }
 }
 
@@ -132,6 +132,7 @@
 
   @media (max-width: $mobile-width) {
     width: 100%;
+    margin-bottom: 20px;
   }
 }
 
@@ -156,6 +157,7 @@
 
 .feedback-form__text-wrapper {
   width: 100%;
+  margin-bottom: 24px;
 }
 
 .feedback-form__text-wrapper textarea {
@@ -221,8 +223,7 @@
   @media (max-width: $mobile-width) {
     width: 100%;
     margin-right: 0;
-    margin-top: 3px;
-    margin-bottom: 5px;
+    margin-bottom: 25px;
   }
 
   &:hover {
